# lunchmoney-python

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
lunchmoney/: __init__.py  categories.py  client.py  tags.py  transactions.py
tests/: test_client.py
tests/cassettes/: categories_get.json  categories_post.json  categories_post_fails.json  categories_post_full.json  categories_post_full_validation.json  categories_post_validation.json  tags_get.json  trx_get.json  trx_get_37555760.json  trx_get_37555795.json  trx_get_37555796.json  trx_get_from_2021-05-01_to_2021-05-30.json  trx_get_from_2021-06-01_to_2021-06-06.json  trx_get_limit_10.json  trx_get_limit_15.json  trx_get_limit_20.json  trx_get_param_asset_id.json  trx_get_param_category_id.json  trx_get_param_recurring_id.json  trx_get_param_tag_id.json  trx_get_to_split.json  trx_get_trxs_limit_10.json  trx_get_trxs_limit_15.json  trx_get_trxs_limit_20.json  trx_post.json  trx_post_fails.json  trx_post_lookup.json  trx_post_multiple.json  trx_post_multiple_fails.json  trx_post_multiple_lookup_37748188.json  trx_post_multiple_lookup_37748189.json  trx_post_split.json  trx_post_to_split.json  trx_update_37555760.json  trx_update_37555760_dict.json
