[tool.poetry]
name = "lunchmoney"
version = "0.1.0"
description = "Python client for the Lunch Money API."
authors = ["Alan Velasco <alanvelasco.a@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
ward = "^0.59.0-beta.0"
isort = "^5.8.0"
pre-commit = "^2.13.0"
vcrpy = "^4.1.1"
tox = "^3.23.1"
flake8 = "^3.9.2"
coverage = { extras = ["toml"], version = "^5.5" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
include = ["lunchmoney/*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
skip = ['__init__.py']

[tool.mypy]
files = "lunchmoney/"
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
strict_optional = false

disallow_untyped_defs = true
